source/blender/windowmanager/intern/wm_init_exit.c
@@ -80,6 +80,8 @@
 #include "RE_engine.h"
 #include "RE_pipeline.h" /* RE_ free stuff */
 
+#include "IMB_thumbs.h"
+
 #ifdef WITH_PYTHON
 #  include "BPY_extern.h"
 #endif
@@ -298,6 +300,9 @@ void WM_init(bContext *C, int argc, const char **argv)
 
   /* Call again to set from userpreferences... */
   BLT_lang_set(NULL);
+
+  /* That one is generated on demand, we need to be sure it's clear on init. */
+  IMB_thumb_clear_translations();
 
   if (!G.background) {
 
